Updated for Picasso_v0.9.x
Added epi_paint_picasso_utilis.py that contains key I/O codes for new picasso data formatting and clearer error messages during boundary detection.

--- a/1_file_cleaner.ipynb
+++ b/1_file_cleaner.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "Workflow\n",
     "\n",
-    "1. Define folder path and the files in the folder. \n",
+    "1. Define the cell folder. \n",
     "2. Define link localization parameters.\n",
     "    - r_max\n",
     "    - max_dark_time\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,11 +60,11 @@
     "import numpy as _np\n",
     "import os.path as _ospath\n",
     "import os as _os\n",
-    "import h5py as _h5py\n",
     "import pandas as _pd\n",
     "from picasso import lib as _lib\n",
     "from picasso import io as _io\n",
-    "from picasso import postprocess as _postprocess\n"
+    "from picasso import postprocess as _postprocess\n",
+    "import epi_paint_picasso_utilis as eppu"
    ]
   },
   {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,21 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ---------------------------------------------------------\n",
-    "# Universal helper: convert DataFrame → NumPy structured array\n",
-    "# ---------------------------------------------------------\n",
-    "\n",
-    "def ensure_numpy_structured(locs):\n",
-    "\n",
-    "    if isinstance(locs, _pd.DataFrame):\n",
-    "        return locs.to_records(index=False)\n",
-    "    return locs\n",
-    "\n",
-    "\n",
     "# ---------------------------------------------------------\n",
     "# Linking functions\n",
     "# ---------------------------------------------------------\n",
@@ -136,34 +125,13 @@
     "    lookup = dict(zip(unique, counts))\n",
     "    return _np.vectorize(lookup.get)(link_group).astype(_np.int32)\n",
     "\n",
-    "\n",
-    "def save_locs_withSuffix(path, locs, info, suffix=''):\n",
-    "\n",
-    "    # ensure DataFrame (required by ensure_sanity)\n",
-    "    if not isinstance(locs, _pd.DataFrame):\n",
-    "        locs = _pd.DataFrame.from_records(locs)\n",
-    "\n",
-    "    locs = _lib.ensure_sanity(locs, info)\n",
-    "\n",
-    "    # convert back to structured array for saving\n",
-    "    locs_np = locs.to_records(index=False)\n",
-    "\n",
-    "    base, ext_locs = _ospath.splitext(path)\n",
-    "    output_locs_path = base + '_' + suffix + ext_locs    \n",
-    "    output_info_path = base + '_' + suffix + '.yaml'\n",
-    "\n",
-    "    with _h5py.File(output_locs_path, \"w\") as locs_file:\n",
-    "        locs_file.create_dataset(\"locs\", data=locs_np)\n",
-    "\n",
-    "    _io.save_info(output_info_path, info, default_flow_style=False)\n",
-    "\n",
     "# ---------------------------------------------------------\n",
     "# Main linking function (fully fixed)\n",
     "# ---------------------------------------------------------\n",
     "\n",
     "def link_custom(locs, r_max, max_dark_time):\n",
     "    # Always convert DataFrame → structured array\n",
-    "    locs = ensure_numpy_structured(locs)\n",
+    "    locs = eppu.ensure_numpy_structured(locs)\n",
     "\n",
     "    if len(locs) == 0:\n",
     "        # return an empty but valid structured array with appended fields\n",
@@ -227,20 +195,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Locs loaded for Tom20 channel.\n",
-      "Percent data removed for Tom20 channel is 10.771074019289188%\n",
-      "Locs loaded for G3BP1 channel.\n",
-      "Percent data removed for G3BP1 channel is 21.196318714415924%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Data cleanup\n",
     "\n",
@@ -253,7 +210,7 @@
     "    percent_data_removed = 100 - (len(locs_cleaned)/len(locs))*100\n",
     "    print('Percent data removed for {} channel is {}%'.format(protein_name, percent_data_removed))\n",
     "    output_path = _ospath.join(output_folder, file)\n",
-    "    save_locs_withSuffix(output_path, locs_cleaned, info, suffix='cleaned')"
+    "    eppu.save_locs_withSuffix(output_path, locs_cleaned, info, suffix='cleaned')"
    ]
   }
  ],
