--- a/3_boundary_polygon_builder.ipynb
+++ b/3_boundary_polygon_builder.ipynb
@@ -23,8 +23,8 @@
    "metadata": {},
    "source": [
     "Workflow\n",
-    "- Define the folder to the cleaned up data and the files.\n",
-    "- Define the file with the boundary data.\n",
+    "- Define the cell folder.\n",
+    "- Search for the file with the boundary data.\n",
     "- Import the Lamin_boundary.hdf5 file and extract the localizations. \n",
     "- Use alphashape to build the polygon around the shape. This should export the polygon. \n",
     "- Use the polygon as a mask and then clean all the imaging channels. "
@@ -43,9 +43,7 @@
     "import numpy as _np\n",
     "import os.path as _ospath\n",
     "import os as _os\n",
-    "import h5py as _h5py\n",
-    "import yaml as _yaml\n",
-    "from PyQt5.QtWidgets import QMessageBox as _QMessageBox\n"
+    "import epi_paint_picasso_utilis as eppu\n"
    ]
   },
   {
@@ -56,7 +54,8 @@
    "source": [
     "# Define the folder and the files with the data\n",
     "\n",
-    "folder = '/Users/abhinav/Desktop/Analysis_Revision/Mock/20250813/cell1' # <<< Set your folder path here\n",
+    "folder = '' # <<< Set your folder path here\n",
+    "folder = _ospath.join(folder, 'Cleaned')\n",
     "file_extn = '.hdf5'\n",
     "file_names = [f for f in _os.listdir(folder) if f.endswith(file_extn)]"
    ]
@@ -70,93 +69,9 @@
     "# Define the output folder\n",
     "\n",
     "parent_folder, working_folder = _ospath.split(folder)\n",
-    "output_folder = _ospath.join(parent_folder, working_folder , 'Masked')\n",
+    "output_folder = _ospath.join(parent_folder, 'Masked')\n",
     "if not _ospath.exists(output_folder):\n",
     "    _os.makedirs(output_folder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Picasso Functions Used Here\n",
-    "\n",
-    "def load_locs(path, qt_parent=None):\n",
-    "    with _h5py.File(path, \"r\") as locs_file:\n",
-    "        locs = locs_file[\"locs\"][...]\n",
-    "    locs = _np.rec.array(\n",
-    "        locs, dtype=locs.dtype\n",
-    "    )  # Convert to rec array with fields as attributes\n",
-    "    info = load_info(path, qt_parent=qt_parent)\n",
-    "    return locs, info\n",
-    "\n",
-    "class NoMetadataFileError(FileNotFoundError):\n",
-    "    pass\n",
-    "\n",
-    "def load_info(path, qt_parent=None):\n",
-    "    path_base, path_extension = _ospath.splitext(path)\n",
-    "    filename = path_base + \".yaml\"\n",
-    "    try:\n",
-    "        with open(filename, \"r\") as info_file:\n",
-    "            info = list(_yaml.load_all(info_file, Loader=_yaml.UnsafeLoader))\n",
-    "    except FileNotFoundError as e:\n",
-    "        print(\"\\nAn error occured. Could not find metadata file:\\n{}\".format(filename))\n",
-    "        if qt_parent is not None:\n",
-    "            _QMessageBox.critical(\n",
-    "                qt_parent,\n",
-    "                \"An error occured\",\n",
-    "                \"Could not find metadata file:\\n{}\".format(filename),\n",
-    "            )\n",
-    "        raise NoMetadataFileError(e)\n",
-    "    return info\n",
-    "\n",
-    "def save_info(path, info, default_flow_style=False):\n",
-    "    with open(path, \"w\") as file:\n",
-    "        _yaml.dump_all(info, file, default_flow_style=default_flow_style)\n",
-    "\n",
-    "def ensure_sanity(locs, info):\n",
-    "    \"\"\"Ensures that localizations are within the image dimensions\n",
-    "    and have positive localization precisions.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    locs : np.rec.array\n",
-    "        Localizations list.\n",
-    "    info : list of dicts\n",
-    "        Localization metadata.\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    locs : np.rec.array\n",
-    "        Localizations that pass the sanity checks.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # no inf or nan:\n",
-    "    locs = locs[\n",
-    "        _np.all(\n",
-    "            _np.array([_np.isfinite(locs[_]) for _ in locs.dtype.names]),\n",
-    "            axis=0,\n",
-    "        )\n",
-    "    ]\n",
-    "    # other sanity checks:\n",
-    "    locs = locs[locs.x > 0]\n",
-    "    locs = locs[locs.y > 0]\n",
-    "    locs = locs[locs.x < info[0][\"Width\"]]\n",
-    "    locs = locs[locs.y < info[0][\"Height\"]]\n",
-    "    locs = locs[locs.lpx > 0]\n",
-    "    locs = locs[locs.lpy > 0]\n",
-    "    return locs\n",
-    "\n",
-    "def save_locs_withSuffix(path, locs, info, suffix=''):\n",
-    "    locs = ensure_sanity(locs, info)\n",
-    "    base, ext_locs = _ospath.splitext(path)\n",
-    "    output_locs_path = base + '_' + suffix + ext_locs    \n",
-    "    output_info_path = base + '_' + suffix + '.yaml'\n",
-    "    with _h5py.File(output_locs_path, \"w\") as locs_file:\n",
-    "        locs_file.create_dataset(\"locs\", data=locs)\n",
-    "    save_info(output_info_path, info, default_flow_style=False)"
    ]
   },
   {
@@ -175,7 +90,7 @@
     "        break\n",
     "\n",
     "# Load the boundary data\n",
-    "boundary_locs, boundary_info = load_locs(boundary_file)\n",
+    "boundary_locs, boundary_info = eppu.load_locs(boundary_file)\n",
     "\n",
     "# Extract the x and y coordinates of the boundary\n",
     "boundary_x = boundary_locs['x']\n",
@@ -219,12 +134,12 @@
     "\n",
     "for file in file_names:\n",
     "    fpath = _ospath.join(folder, file)\n",
-    "    locs, info = load_locs(fpath)\n",
+    "    locs, info = eppu.load_locs(fpath)\n",
     "    points = _np.column_stack((locs['x'], locs['y']))\n",
     "    inside_mask = polygon_path.contains_points(points)\n",
     "    filtered_locs = locs[inside_mask]\n",
     "    output_path = _ospath.join(output_folder, file)\n",
-    "    save_locs_withSuffix(output_path, filtered_locs, info, suffix='Masked')\n",
+    "    eppu.save_locs_withSuffix(output_path, filtered_locs, info, suffix='Masked')\n",
     "    print('The file {} is processed'.format(file))"
    ]
   }
