--- a/4_cell_sectioner.ipynb
+++ b/4_cell_sectioner.ipynb
@@ -50,7 +50,8 @@
     "import numpy as _np\n",
     "from picasso import lib as _lib\n",
     "from picasso import io as _io\n",
-    "import math"
+    "import math\n",
+    "import epi_paint_picasso_utilis as eppu"
    ]
   },
   {
@@ -61,7 +62,7 @@
    "source": [
     "# Define the folder location and the file externsion inside the folder.\n",
     "\n",
-    "folder = '/Volumes/DataVol1/03092025_Kyoto_ActD_5H_9plex/Analysis/cell2'    # <<< Set your folder path here\n",
+    "folder = ''    # <<< Set your folder path here\n",
     "folder = _ospath.join(folder, 'Masked')\n",
     "file_extn = '.hdf5'\n",
     "file_names = [f for f in _os.listdir(folder) if f.endswith(file_extn)]"
@@ -197,11 +198,11 @@
     "    y_centers = _np.array(y_centers, dtype=_np.int32)\n",
     "\n",
     "    # Add the grid IDs to the recarray\n",
-    "    locs_sector_id = _lib.append_to_rec(locs, grid_ids, 'sector_id')\n",
-    "    locs_sector_id = _lib.append_to_rec(locs_sector_id, x_centers, 'x_pixel_pos')\n",
-    "    locs_sector_id = _lib.append_to_rec(locs_sector_id, y_centers, 'y_pixel_pos')\n",
+    "    locs['sector_id'] = grid_ids\n",
+    "    locs['x_pixel_pos'] = x_centers\n",
+    "    locs['y_pixel_pos'] = y_centers\n",
     "    \n",
-    "    return locs_sector_id"
+    "    return locs"
    ]
   },
   {
@@ -229,7 +230,7 @@
     "    protein_name = file.split('.')[0]\n",
     "    locs_sector_id = assign_sector_ids(locs, x_edges, y_edges, grid)\n",
     "    output_path = _ospath.join(output_folder, file)\n",
-    "    save_locs_withSuffix(output_path, locs_sector_id, info, suffix='sector_id')\n",
+    "    eppu.save_locs_withSuffix(output_path, locs_sector_id, info, suffix='sector_id')\n",
     "    print('Done with assigning sector IDs for', protein_name)"
    ]
   },
@@ -262,7 +263,9 @@
     "\n",
     "# Save the sector information\n",
     "with open(_ospath.join(output_folder, 'sector_info.yaml'), 'w') as f:\n",
-    "    _yaml.dump(sector_info, f)"
+    "    _yaml.dump(sector_info, f)\n",
+    "\n",
+    "print('Saved the Sectoring information in the output folder.')"
    ]
   }
  ],
@@ -282,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
