--- a/6_correlation_plotting.ipynb
+++ b/6_correlation_plotting.ipynb
@@ -200,7 +200,7 @@
    "source": [
     "# Average Correlation Matrix\n",
     "\n",
-    "folder = '/Volumes/DataVol4/Micky_tmp/NB_DATA_REVISIONS/Mock/Picked_Cells'  # <<< Set your folder path here\n",
+    "folder = ''  # <<< Set your folder path here\n",
     "output_folder = output_folder_path(folder)\n",
     "file_name = 'data_1.csv'\n",
     "\n",
