--- a/7_2_spatial_correlation_plotter_vs_single.ipynb
+++ b/7_2_spatial_correlation_plotter_vs_single.ipynb
@@ -29,7 +29,8 @@
     "import itertools\n",
     "from tqdm import tqdm\n",
     "from matplotlib.colors import LogNorm\n",
-    "from matplotlib.colors import LinearSegmentedColormap, to_hex"
+    "from matplotlib.colors import LinearSegmentedColormap, to_hex\n",
+    "import epi_paint_picasso_utilis as eppu"
    ]
   },
   {
@@ -70,35 +71,6 @@
    "outputs": [],
    "source": [
     "# Functions used here\n",
-    "\n",
-    "def load_locs(path, qt_parent=None):\n",
-    "    with _h5py.File(path, \"r\") as locs_file:\n",
-    "        locs = locs_file[\"locs\"][...]\n",
-    "    locs = _np.rec.array(\n",
-    "        locs, dtype=locs.dtype\n",
-    "    )  # Convert to rec array with fields as attributes\n",
-    "    info = load_info(path, qt_parent=qt_parent)\n",
-    "    return locs, info\n",
-    "\n",
-    "class NoMetadataFileError(FileNotFoundError):\n",
-    "    pass\n",
-    "\n",
-    "def load_info(path, qt_parent=None):\n",
-    "    path_base, path_extension = _ospath.splitext(path)\n",
-    "    filename = path_base + \".yaml\"\n",
-    "    try:\n",
-    "        with open(filename, \"r\") as info_file:\n",
-    "            info = list(_yaml.load_all(info_file, Loader=_yaml.UnsafeLoader))\n",
-    "    except FileNotFoundError as e:\n",
-    "        print(\"\\nAn error occured. Could not find metadata file:\\n{}\".format(filename))\n",
-    "        if qt_parent is not None:\n",
-    "            _QMessageBox.critical(\n",
-    "                qt_parent,\n",
-    "                \"An error occured\",\n",
-    "                \"Could not find metadata file:\\n{}\".format(filename),\n",
-    "            )\n",
-    "        raise NoMetadataFileError(e)\n",
-    "    return info\n",
     "\n",
     "def spatial_data_mask(data, center, window):\n",
     "    mask = (data[:, 0] > center[0] - (window[0]/2)) & (data[:, 0] < center[0] + (window[0]/2)) & (data[:, 1] > center[1] - (window[1]/2)) & (data[:, 1] < center[1] + (window[1]/2))\n",
@@ -349,7 +321,7 @@
    "outputs": [],
    "source": [
     "# Define the folder with the data and the correlation files.\n",
-    "folder = '/Users/abhinav/Library/CloudStorage/OneDrive-IndianInstituteofScience/AnalysisFolder/Epi/20251112/Mock/cell5' # <<< Set your folder path here\n",
+    "folder = '' # <<< Set your folder path here\n",
     "min_radius = 100\n",
     "step_size = 100\n",
     "max_radius = 1000\n",
@@ -386,8 +358,8 @@
     "                continue\n",
     "            protein_2 = file_2.split('_')[0]\n",
     "            print(f'Plotting {protein_1} and {protein_2} sets')\n",
-    "            locs_1, info_1 = load_locs(_ospath.join(data_folder, file_1))\n",
-    "            locs_2, info_2 = load_locs(_ospath.join(data_folder, file_2))\n",
+    "            locs_1, info_1 = eppu.load_locs(_ospath.join(data_folder, file_1))\n",
+    "            locs_2, info_2 = eppu.load_locs(_ospath.join(data_folder, file_2))\n",
     "            data_1 = _np.column_stack((locs_1.x, locs_1.y))\n",
     "            data_1 = data_1 * pixel_size\n",
     "            data_2 = _np.column_stack((locs_2.x, locs_2.y))\n",
@@ -400,7 +372,7 @@
     "# for file in data_files:\n",
     "#     if reference in file:\n",
     "#         view_point = file.split('_')[0]\n",
-    "#         locs, info = load_locs(_ospath.join(data_folder, file))\n",
+    "#         locs, info = eppu.load_locs(_ospath.join(data_folder, file))\n",
     "\n",
     "# Save analysis parameters to a text file\n",
     "parameter_file_name = 'parameters_' + reference + '.txt'\n",
@@ -440,8 +412,8 @@
     "xlim = (center[0] - (window[0]/2), center[0] + (window[0]/2))\n",
     "ylim = (center[1] - (window[1]/2), center[1] + (window[1]/2))\n",
     "\n",
-    "file_locs = '/Users/abhinav/Library/CloudStorage/OneDrive-IndianInstituteofScience/AnalysisFolder/Epi/20251112/Mock/cell5/Masked/SC35_masked.hdf5'  # <<< Set your folder path here\n",
-    "locs, info = load_locs(file_locs)\n",
+    "file_locs = ''  # <<< Set your folder path here\n",
+    "locs, info = eppu.load_locs(file_locs)\n",
     "data = _np.column_stack((locs.x, locs.y))\n",
     "pixel_size = 130\n",
     "data = data * pixel_size\n",
@@ -477,15 +449,15 @@
     "\n",
     "for file_1 in data_files:\n",
     "    if reference in file_1:\n",
-    "        locs_1, info = load_locs(_ospath.join(data_folder, file_1))\n",
+    "        locs_1, info = eppu.load_locs(_ospath.join(data_folder, file_1))\n",
     "        protein_1 = file_1.split('_')[0]\n",
     "        for file_2 in data_files:\n",
     "            if target_1 in file_2:\n",
-    "                locs_2, info = load_locs(_ospath.join(data_folder, file_2))\n",
+    "                locs_2, info = eppu.load_locs(_ospath.join(data_folder, file_2))\n",
     "                protein_2 = file_2.split('_')[0]\n",
     "                for file_3 in data_files:\n",
     "                    if target_2 in file_3:\n",
-    "                        locs_3, info = load_locs(_ospath.join(data_folder, file_3))\n",
+    "                        locs_3, info = eppu.load_locs(_ospath.join(data_folder, file_3))\n",
     "                        protein_3 = file_3.split('_')[0]\n",
     "                        print(f'Plotting {target_1} and {target_2} sets with {reference} as the viewpoint')\n",
     "                        data_1 = _np.column_stack((locs_1.x, locs_1.y))\n",
