--- a/7_3_spatial_correlation_plotter_all_vs_all_KDE.ipynb
+++ b/7_3_spatial_correlation_plotter_all_vs_all_KDE.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder = '/Users/abhinav/Library/CloudStorage/OneDrive-IndianInstituteofScience/AnalysisFolder/Epi/Kyoto_Multiplex/Mock/Analysed/05-03-2025/Cleaned/Final'\n",
+    "folder = ''\n",
     "maximum_threshold = 0.7\n",
     "minimum_threshold = -0.7\n",
     "min_radius = 100\n",
