--- a/5_feature_extractor.ipynb
+++ b/5_feature_extractor.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "# Define the folder location and the file extension inside the folder.\n",
     "\n",
-    "folder = '/Volumes/DataVol1/03092025_Kyoto_ActD_5H_9plex/Analysis/cell2'    # <<< Set your folder path here\n",
+    "folder = ''    # <<< Set your folder path here\n",
     "folder = _ospath.join(folder, 'Sectored')\n",
     "file_extn = '.hdf5'\n",
     "file_names = [f for f in _os.listdir(folder) if f.endswith(file_extn)]\n",
@@ -178,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
