Updated for Picasso_v0.9.x

--- a/1_file_cleaner.ipynb
+++ b/1_file_cleaner.ipynb
@@ -180,7 +180,7 @@
     "\n",
     "def locs_cleaner(locs, r_max, max_dark_time, max_bright_time):\n",
     "    # Ensure consistent structured array\n",
-    "    locs = ensure_numpy_structured(locs)\n",
+    "    locs = eppu.ensure_numpy_structured(locs)\n",
     "\n",
     "    link_group_n = link_custom(locs, r_max, max_dark_time)\n",
     "\n",
